added simple registration service with password encoder
